--- a/index.html
+++ b/index.html
@@ -10,27 +10,25 @@
 		<h1>夜食ウォーターのホームページ</h1>
 	</div>
 	<div id = "main">
+	<img src = "picnic_couple.gif" height="30%">
+	<div id = "mainmain">
 	<h3>作品群</h3><br>
 	<br>
 	<br>
+
 	<a href="https://yashokuwater.github.io/magicalgirl445/">・魔法少女445(絶賛休載中！)</a>　-新都社という漫画サイトで公開している漫画です。リニューアルして再開する予定？-<br>
 	<br>
-	どらんご<br>
-	<br>
-	どらんご<br>
 
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
-	どらんご<br>
+	<a href="http://youtube.com/c/wateryashoku">・Youtubeチャンネル</a> -3DCGや音楽をアップロードしています。剣持刀也というVtuberのmadを作ったらちょい登録者が増えてびっくりしています。最近は作ってないのでちょっと落ち着いています。<br>
+	<br>
+
+
+	<a href="https://soundcloud.com/ze5wjupwx8zn?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">・サウンドクラウド</a> -サウンドクラウドで音楽を作っています<br>
+	<iframe width="50%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1122338374&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ze5wjupwx8zn" title="ぺるちぇそし子" target="_blank" style="color: #cccccc; text-decoration: none;">ぺるちぇそし子</a> · <a href="https://soundcloud.com/ze5wjupwx8zn/osushi-turn" title="OSUSHI TURN" target="_blank" style="color: #cccccc; text-decoration: none;">OSUSHI TURN</a></div>
+
+
 	</div>
+</div>
 
 </body>
 
