--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 	<div id = "mainmain">
 	<h3>作品群</h3><br>
 	<br>
+	<a href= "game.html">ゲームコーナー</a>　小学生のみんな、遊んでくれ！
+	<br>
+	<br>
+
+	<a href ="https://unityroom.com/games/oyoyonikki">Unityroomというところにもゲームを上げています</a>
+	<br>
 	<br>
 
 	<a href="https://yashokuwater.github.io/magicalgirl445/">・魔法少女445(絶賛休載中！)</a>　-新都社という漫画サイトで公開している漫画です。リニューアルして再開する予定？-<br>
