--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div id = "mainmain">
 	<h3>作品群</h3><br>
 	<br>
-	<a href= "game.html">ゲームコーナー</a>　小学生のみんな、遊んでくれ！
+	<a href= "./game/game.html">ゲームコーナー</a>　小学生のみんな、遊んでくれ！
 	<br>
 	<br>
 
