--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 	<a href="https://soundcloud.com/ze5wjupwx8zn?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">・サウンドクラウド</a> -サウンドクラウドで音楽を作っています<br>
 	<iframe width="50%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1122338374&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ze5wjupwx8zn" title="ぺるちぇそし子" target="_blank" style="color: #cccccc; text-decoration: none;">ぺるちぇそし子</a> · <a href="https://soundcloud.com/ze5wjupwx8zn/osushi-turn" title="OSUSHI TURN" target="_blank" style="color: #cccccc; text-decoration: none;">OSUSHI TURN</a></div>
 
+	　<br>
+	  <br>
+	  <!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d502_f6_022/620f5e83ac4e4/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_02.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_03.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_04.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_05.gif" border="0" alt=""></td></tr></table><!--ここまで-->
+
 
 	</div>
 </div>
