--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<br>
 	<br>
 		
-	<a href= "https://vrchat.com/home/user/usr_58e85830-f72a-4e08-944c-e91a67ede25d">VRChatやってます！フレンド登録してね！！</a>
+	<a href= "https://vrchat.com/home/user/usr_58e85830-f72a-4e08-944c-e91a67ede25d">VRChatやってます！フレンド登録してね！！</a><br>
 
 	<a href ="https://unityroom.com/games/oyoyonikki">Unityroomというところにもゲームを上げています</a>
 	<br>
